# Qt_Practice

QML_CPP_Integration_Example/: CMakeLists.txt  machine.cpp  machine.h  main.cpp  main.qml
Register_Cpp_Class_with_QML_Type/: CMakeLists.txt  main.cpp  main.qml  test.cpp  test.h
qml-passing-variables1/: CMakeLists.txt  Page1Form.qml  Page2Form.qml  main.cpp  main.qml
qml-passing-variables2/: CMakeLists.txt  Page1.qml  Page2.qml  main.cpp  main.qml
qml_Call_Cpp_slot_form_qml/: CMakeLists.txt  main.cpp  main.qml  test.cpp  test.h
qml_Call_QML_Slots_From_Cpp/: CMakeLists.txt  main.cpp  main.qml  test.cpp  test.h
qml_Dice_Roller/: CMakeLists.txt  DiceDelegate.qml  main.cpp  main.qml
qml_Scroll_view/: CMakeLists.txt  main.cpp  main.qml
qml_Stack_View/: CMakeLists.txt  Page1Form.qml  Page2Form.qml  main.cpp  main.qml
qml_foot_to_inch_converter/: CMakeLists.txt  main.cpp  main.qml
qml_radom_food/: CMakeLists.txt  main.cpp  main.qml
qml_signal_slots1/: CMakeLists.txt  main.cpp  main.qml
qml_signal_slots_between_2_element/: CMakeLists.txt  Reciver.qml  Sender.qml  main.cpp  main.qml
qml_square_footage_calculator/: CMakeLists.txt  main.cpp  main.qml
qtml_image_viewer_example/: CMakeLists.txt  dirhelper.cpp  dirhelper.h  main.cpp  main.qml
